--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "handlebars-helpers": "^0.10.0",
     "hbs": "^4.2.0",
     "mysql2": "^3.12.0",
+    "sweetalert2": "^11.15.5",
     "wax-on": "^1.2.2"
   }
 }
